--- a/fpga/Makefile
+++ b/fpga/Makefile
@@ -4,6 +4,6 @@
 # All files that are generated are automatically deleted
 compile_test:
 	ghdl -a debounce/debounce.vhdl
-	ghdl -a -fsynopsys vertices_list/list_of_vertices.vhdl
+	ghdl -a -fsynopsys vertices_list/lov.vhdl
 	ghdl -a toplevel.vhdl
 	rm -f ./*.cf
